k8/02-bots/04-linear_discord_bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linear-discord-bot-service
  namespace: mfo-bots
spec:
  selector:
    app: linear-discord-bot
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
