k8/02-bots/04-linear_discord_bot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linear-discord-bot-ingress
  namespace: mfo-bots
  annotations:
    cert-manager.io/cluster-issuer: http01-clusterissuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linear-bot.6degrees.com.sa
      secretName: linear-discord-bot-tls
  rules:
  - host: linear-bot.6degrees.com.sa  # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linear-discord-bot-service
            port:
              number: 80
